--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,14 @@
 .photo img{
 	width: 20%;
 }
-
 .photo p {
 	float: right;
 	padding-right: 450px;
-	padding-top:90px;
+	padding-top:40px;
 	font-size: 20px;
 	line-height: 50px;
+	font-size: 35px;
+	font-weight: bold;
 	
 }
 .nameofcv p {
@@ -24,7 +25,8 @@ div.summary {
 	border: 4px solid black; /* Параметры границы */
 	padding-left: 250px;
 	float: left;
-	text-align: left;
+	text-align: center;
+
 	
 }
 div.skills {
@@ -33,7 +35,8 @@ div.skills {
 	padding-left: 250px;
 	float: left;
 	word-wrap: break-word;
-	text-align: left;
+	text-align: center;
+	font-size: 25px;
 }
 div.xp {
 	width: 600px; /* Ширина слоя */ /* Значение отступов */
@@ -41,7 +44,7 @@ div.xp {
 	padding-left: 250px;
 	float: left;
 	word-wrap: break-word;
-	text-align: left;
+	text-align: center;
 	height: 100px;
 }
 div.education {
@@ -50,8 +53,9 @@ div.education {
 	padding-left: 250px;
 	float: left;
 	word-wrap: break-word;
-	text-align: left;
+	text-align: center;
 	height: 100px;
+	font-size: 25px;
 }
 div.english {
 	width: 600px; /* Ширина слоя */ /* Значение отступов */
@@ -59,8 +63,9 @@ div.english {
 	padding-left: 250px;
 	float: left;
 	word-wrap: break-word;
-	text-align: left;
+	text-align: center;
 	height: 100px;
+	font-size: 25px;
 }
 div.menu {
 	float:left;
@@ -68,8 +73,10 @@ div.menu {
 	border: 4px solid black; /* Параметры границы */
 	padding: 10px;
 	word-wrap: break-word;
+	font-size: 25px;
 }
 .menu p {
 	color:#FF8C00;
 	font-size: 30px;
+	font-weight: bold;
 }
