--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@ body, html {
 
 .constructor { 
     /* The image used */
-    background-image: url("C:/Users/User-PC/Desktop/GH/rsschool-codejam1-cv/img/kakasi.png");
+    background-image: url("https://pp.userapi.com/c850232/v850232675/419a0/ecghvTpGIJ0.jpg");
     /* Full height */
     height: 950px; 
 
